--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "animate.css": "^3.5.2",
     "axios": "^0.17.1",
     "socket.io-client": "^2.0.4",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.4",
+    "lodash": "3.10.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
