--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "dependencies": {
     "animate.css": "^3.5.2",
     "axios": "^0.17.1",
-    "socket.io-client": "^2.0.4",
+    "faker": "^4.1.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
     "lodash": "3.10.1",
+    "socket.io-client": "^2.0.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^2.3.1"
