--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
     "lodash": "3.10.1",
+    "mint-ui": "^2.2.13",
     "socket.io-client": "^2.0.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
